--- a/AudioAPI/AudioAPI.csproj
+++ b/AudioAPI/AudioAPI.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EFC912D9-A979-4645-AEC2-7A7DF48885B6}</ProjectGuid>
+    <ProjectGuid>{860D1146-8C03-411B-88F6-30FA3E1AEE46}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ChangeDesktopWallpaper</RootNamespace>
-    <AssemblyName>ChangeDesktopWallpaper</AssemblyName>
+    <RootNamespace>AudioAPI</RootNamespace>
+    <AssemblyName>AudioAPI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
